# wasm-lambda

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml
crates/bridge/: Cargo.toml
crates/bridge-codegen/: Cargo.toml
crates/bridge-codegen/src/: lib.rs
crates/bridge-core/: Cargo.toml
crates/bridge/src/: api.rs  lib.rs  message.rs
crates/wasm-lambda-bridge/: Cargo.toml
crates/wasm-lambda-bridge-codegen/: Cargo.toml
crates/wasm-lambda-bridge-codegen/src/: lib.rs
crates/wasm-lambda-bridge-core/: Cargo.toml
crates/wasm-lambda-bridge-core/src/: hostcall.rs  lib.rs  value.rs  web.rs
crates/wasm-lambda-bridge/src/: http.rs  lib.rs
crates/wasm-lambda-bridge/src/web/: extractor.rs  middleware.rs  mod.rs  response.rs  router.rs
crates/wasm-lambda-bridge/src/web/core/: middleware.rs
crates/wasm-lambda-core/: Cargo.toml
crates/wasm-lambda-core/src/: router.rs
crates/wasm-lambda-core/src/router/: middleware.rs  mod.rs
examples/hello-world/: Cargo.toml  modules.toml
examples/hello-world/public/: index.html
examples/hello-world/public/subdir/: page2.html
examples/hello-world/src/: fetch.rs  main.rs  next-main.rs
migrations/: 20220525152920_init.sql
modules/portal/: Cargo.toml
modules/portal/src/: main.rs
modules/portal/src/domain/: external_control.rs  github.rs  mod.rs
modules/portal/src/middleware/: mod.rs
modules/portal/web/: package.json  pnpm-lock.yaml
src/: main.rs
src/app/: http_entry.rs  infra.rs  mod.rs
src/app/external_control/: infra.rs  mod.rs  router.rs
src/app/external_control/service/: mod.rs  module.rs  module_owner.rs  module_version.rs
src/app/http_entry/: mod.rs  router.rs
src/app/http_entry/service/: entry.rs
src/app/infra/: middleware.rs  mod.rs  router.rs
src/cli/: mod.rs
src/cmd/: dev.rs  mod.rs  run.rs  serve.rs
src/controller/: mod.rs
src/core/: hostcall.rs  mod.rs  vm.rs
src/db/: mod.rs  model.rs
src/db/dao/: mod.rs  module.rs  module_owner.rs
src/service/: mod.rs
