[package]
edition = "2021"
name = "wasm-lambda"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
async-trait = "0.1.53"
bridge = {path = "crates/bridge", package = "wasm-lambda-bridge", features = ["value"]}
bson = "2.2.0"
colored = "2.0.0"
hex = "0.4.3"
hyper = {version = "0.14.18", features = ["full"]}
map-macro = "0.2.1"
reqwest = {version = "0.11.10"}
ring = "0.16.20"
route-recognizer = "0.3.1"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
sqlx = {version = "0.5.13", features = ["mysql", "runtime-tokio-native-tls", "migrate", "json"]}
tokio = {version = "1.17.0", features = ["full"]}
url = "2.2.2"
wasmtime = "0.37.0"
wasmtime-wasi = "0.37.0"

[workspace]

members = [
  "crates/bridge",
  "examples/hello-world",
]

# TODO package
[profile.dev.package."*"]
opt-level = 3
