[package]
edition = "2021"
name = "wasm-lambda"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
entry_profile = []

[dependencies]
anyhow = "1.0.53"
async-trait = "0.1.53"
bridge = {path = "crates/wasm-lambda-bridge-core", package = "wasm-lambda-bridge-core", features = ["value"]}
bson = "2.2.0"
clap = {version = "3.1.18", features = ["derive"]}
colored = "2.0.0"
hex = "0.4.3"
hyper = {version = "0.14.18", features = ["full"]}
log = "0.4.17"
map-macro = "0.2.1"
matchit = "0.5.0"
notify = "4.0.17"
reqwest = {version = "0.11.10"}
ring = "0.16.20"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
sqlx = {version = "0.5.13", features = ["mysql", "runtime-tokio-native-tls", "migrate", "json"]}
tokio = {version = "1.17.0", features = ["full"]}
url = "2.2.2"
wasm-lambda-core = {path = "crates/wasm-lambda-core", package = "wasm-lambda-core"}
wasmtime = "0.37.0"
wasmtime-wasi = "0.37.0"

[workspace]

members = [
  "crates/wasm-lambda-core",
  "crates/wasm-lambda-bridge",
  "crates/wasm-lambda-bridge-codegen",
  "crates/wasm-lambda-bridge-core",
]

exclude = [
  "examples/hello-world",
]

# TODO package
[profile.dev.package."*"]
opt-level = 3
