[package]
edition = "2021"
name = "wasm-lambda"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
entry_profile = []

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.53"
bridge = {path = "crates/wasm-lambda-bridge-core", package = "wasm-lambda-bridge-core", features = ["value"]}
bson = "2.2.0"
clap = {version = "4.0.18", features = ["derive"]}
colored = "2.0.0"
hex = "0.4.3"
hyper = {version = "0.14.18", features = ["full"]}
map-macro = "0.2.1"
matchit = "0.6.0"
notify = "5.0.0"
ring = "0.16.20"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
tokio = {version = "1.17.0", features = ["full"]}
url = "2.2.2"
wasmtime = "2.0.1"
wasmtime-wasi = "2.0.1"
toml = "0.5.9"
strum_macros = "0.24.1"
strum = "0.24.1"
log = "0.4.17"
env_logger = "0.9.1"

[workspace]

members = [
  "crates/wasm-lambda-bridge",
  "crates/wasm-lambda-bridge-codegen",
  "crates/wasm-lambda-bridge-core",
]

exclude = [
  "examples/hello-world",
]

# TODO package
[profile.dev.package."*"]
opt-level = 3
