[package]
edition = "2021"
name = "wasm-lambda-bridge-codegen"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = "0.14.1"
include_dir = "0.7.2"
new_mime_guess = "4.0.1"
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = {version = "1.0.56", features = ["full"]}
walkdir = "2.3.2"
