[package]
edition = "2021"
name = "wasm-lambda-bridge"
publish = true
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
core = []
default = ["core", "web"]
web = []

[dependencies]
anyhow = "1.0.57"
bridge-codegen = {path = "../wasm-lambda-bridge-codegen", package = "wasm-lambda-bridge-codegen"}
bridge-core = {path = "../wasm-lambda-bridge-core", package = "wasm-lambda-bridge-core", features = ["hostcall", "value"]}
form-data = "0.3.3"
matchit = "0.5.0"
mime = "0.3.16"
qstring = "0.7.2"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
